--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".capital_gain_loss"></activity>
+        <activity android:name=".Profile"></activity>
+        <activity android:name=".TradeHistory" />
+        <activity android:name=".SearchActivity" />
+        <activity android:name=".SearchAcitvity" />
+        <activity android:name=".home" />
+        <activity android:name=".watchlist" />
+        <activity android:name=".capital_gain_loss" />
         <activity android:name=".captial_gain_loss" />
         <activity android:name=".performance" />
         <activity android:name=".UpdateNote" />
