--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Profile"></activity>
+        <activity android:name=".newPassword"></activity>
+        <activity android:name=".email" />
+        <activity android:name=".Profile" />
         <activity android:name=".TradeHistory" />
         <activity android:name=".SearchActivity" />
         <activity android:name=".SearchAcitvity" />
