--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Profile"></activity>
+        <activity android:name=".Profile" />
         <activity android:name=".TradeHistory" />
         <activity android:name=".SearchActivity" />
-        <activity android:name=".SearchAcitvity" />
         <activity android:name=".home" />
-        <activity android:name=".watchlist" />
+        <activity android:name=".WatchListActivity" />
         <activity android:name=".capital_gain_loss" />
-        <activity android:name=".captial_gain_loss" />
         <activity android:name=".performance" />
         <activity android:name=".UpdateNote" />
-        <activity android:name=".note_layout" />
         <activity android:name=".Add_notes" />
         <activity android:name=".notes" />
         <activity android:name=".Transaction" />
@@ -33,7 +30,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".WatchListActivity" />
+        <activity android:name=".News"></activity>
     </application>
 
 </manifest>
